# wat-ast

./: CHANGELOG.md  Cargo.toml  rustfmt.toml
src/: document.rs  error.rs  export.rs  expr.rs  expression.rs  identifier.rs  import_desc.rs  index.rs  integer.rs  lib.rs  main.rs  module.rs  named_value_type.rs  param.rs  result.rs  section.rs  type_use.rs  types.rs
src/elements/: export.rs  func.rs  func_type.rs  identifier.rs  import_entry.rs  instruction.rs  integer.rs  label.rs  mod.rs  module.rs  name.rs  params.rs  results.rs  section.rs  sign.rs  type_use.rs  value.rs  value_type.rs
