[package]
name = "wat-ast"
version = "0.2.1"
authors = ["Yage Hu <yagejhu@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
description = "WebAssembly text format (.wat) abstract syntax tree for generating human readable code."

[dependencies]
wast = { version = "26.0", default-features = false }
