[package]
name = "wat-ast"
version = "0.14.0"
authors = ["Yage Hu <yagejhu@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
description = "WebAssembly text format (.wat) style-preserving syntax tree for generating human readable code."
repository = "https://github.com/yagehu/wat-ast"

[dependencies]
wast = { version = "26.0", default-features = false }
